--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "@types/proxy-addr": "^2.0.1",
     "@types/source-map-support": "^0.5.8",
     "adonis-preset-ts": "^2.1.0",
+    "axios": "^1.6.2",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-prettier": "^5.0.1",
     "pino-pretty": "^10.2.3",
     "prettier": "^3.0.3",
+    "supertest": "^6.3.3",
     "typescript": "~4.6",
     "youch": "^3.3.2",
     "youch-terminal": "^2.2.3"
@@ -59,7 +61,7 @@
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.11",
-    "luxon": "^3.4.3",
+    "luxon": "^3.4.4",
     "mysql2": "^3.6.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
